# ZSharp-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SoftwareRendererV3.sln
SoftwareRenderer/: CMakeLists.txt  GDIWrapper.cpp  GDIWrapper.h  SoftwareRenderer.vcxproj  SoftwareRenderer.vcxproj.filters  Win32Main.cpp  WindowsHeadersWrapper.h  ZSharpApplication.cpp  ZSharpApplication.h  main.cpp
SoftwareRendererV3/: SoftwareRendererV3.cpp  SoftwareRendererV3.vcxproj  SoftwareRendererV3.vcxproj.filters
ZSharp/: AssetLoader.cpp  AssetLoader.h  CMakeLists.txt  Camera.cpp  Camera.h  ClipBuffer.h  Config.h  Constants.h  FileUtilities.cpp  FileUtilities.h  Framebuffer.cpp  Framebuffer.h  GlobalEdgeTable.cpp  GlobalEdgeTable.h  IndexBuffer.cpp  IndexBuffer.h  InputManager.cpp  InputManager.h  JsonObject.cpp  JsonObject.h  JsonScanner.cpp  Mat2x3.h  Mat4x4.h  Mesh.h  Model.h  Renderer.cpp  Renderer.h  Scanner.cpp  Scanner.h  Triangle.h  UtilMath.cpp  UtilMath.h  Vec3.h  Vec4.h  VertexBuffer.h  ZAlgorithm.h  ZColor.h  ZConfig.cpp  ZConfig.h  ZDrawing.cpp  (+9 more)
